@@ -125,6 +125,57 @@ namespace AjIo.Tests.Language
         {
             this.obj.UpdateSlot("undefined", "bar");
         }
+
+        [TestMethod]
+        public void DefineAndInvokeMethod()
+        {
+            Message message = new Message("name");
+            Message method = new Message("method", new object[] { message });
+            Message define = new Message("setSlot", new object[] { "getName", method });
+
+            define.Send(this.obj, this.obj);
+
+            object result = this.obj.GetSlot("getName");
+
+            Assert.IsNotNull(result);
+            Assert.IsInstanceOfType(result, typeof(IMethod));
+
+            Message invoke = new Message("getName");
+
+            object value = invoke.Send(this.obj, this.obj);
+
+            Assert.IsNotNull(value);
+            Assert.AreEqual("Fido", value);
+        }
+
+        [TestMethod]
+        public void DefineAndInvokeMethodWithParameter()
+        {
+            Message message = new Message("a");
+            Message parameter = new Message("a");
+            Message method = new Message("method", new object[] { parameter, message });
+            Message define = new Message("setSlot", new object[] { "getA", method });
+
+            define.Send(this.obj, this.obj);
+
+            object result = this.obj.GetSlot("getA");
+
+            Assert.IsNotNull(result);
+            Assert.IsInstanceOfType(result, typeof(IMethod));
+
+            Message invoke = new Message("getA", new object[] { 123 });
+
+            object value = invoke.Send(this.obj, this.obj);
+
+            Assert.IsNotNull(value);
+            Assert.AreEqual(123, value);
+        }
+
+        [TestMethod]
+        public void GetSelf()
+        {
+            Assert.AreSame(this.obj, this.obj.Self);
+        }
     }
 }
 
