@@ -14,6 +14,7 @@
             this.SetSlot("clone", new CloneMethod());
             this.SetSlot("setSlot", new SetSlotMethod());
             this.SetSlot("newSlot", new NewSlotMethod());
+            this.SetSlot("method", new MethodMethod());
         }
 
         public override string TypeName { get { return "Object"; } }
