@@ -17,3 +17,5 @@ EvaluationTests
 LocalObject with tests
 New Message.Send instead IObject.Process
 BaseMethod
+MethodMethod, Method with evaluation tests
+IObject.Self with tests
